--- a/.env
+++ b/.env
@@ -5,17 +5,19 @@ APP_DEBUG=true
 # APP_URL=http://localhost
 APP_URL=http://semnasdata.com
 
-
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=mysql 
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+# DB_DATABASE=db_semnasdata
+# DB_USERNAME=root
+# DB_PASSWORD=
+DB_DATABASE=n1578454_semnasdata
+DB_USERNAME=n1578454_furizal_semnasdata
+DB_PASSWORD=2UsmHNQ6D2pz
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
