--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:9bCZ+sFJz62rW0p6D5nGqyCWlpiphMZDjmQdb0s5Yj0=
 APP_DEBUG=true
-# APP_URL=http://localhost
-APP_URL=http://semnasdata.com
+APP_URL=http://localhost
+# APP_URL=http://semnasdata.com
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -12,12 +12,12 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql 
 DB_HOST=127.0.0.1
 DB_PORT=3306
-# DB_DATABASE=db_semnasdata
-# DB_USERNAME=root
-# DB_PASSWORD=
-DB_DATABASE=n1578454_semnasdata
-DB_USERNAME=n1578454_furizal_semnasdata
-DB_PASSWORD=2UsmHNQ6D2pz
+DB_DATABASE=db_semnasdata
+DB_USERNAME=root
+DB_PASSWORD=
+# DB_DATABASE=n1578454_semnasdata
+# DB_USERNAME=n1578454_furizal_semnasdata
+# DB_PASSWORD=2UsmHNQ6D2pz
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
