--- a/.env
+++ b/.env
@@ -1,74 +1,8 @@
-APP_NAME="Seminar Nasional"
-APP_ENV=local
-APP_KEY=base64:qmvvHOMxlUciRQzOsiMDKgP1T4UoeUJPvxSE1HkjAOA=
-APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
-
-LOG_CHANNEL=stack
-LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
-
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=db_semnasdata
-DB_USERNAME=root
-DB_PASSWORD=
-
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
-
-MEMCACHED_HOST=127.0.0.1
-
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-w
-MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
-
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
-
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_HOST=
-PUSHER_PORT=443
-PUSHER_SCHEME=https
-PUSHER_APP_CLUSTER=mt1
-
-VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-VITE_PUSHER_HOST="${PUSHER_HOST}"
-VITE_PUSHER_PORT="${PUSHER_PORT}"
-VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
-VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-FOLDER_IN_PUBLIC_HTML = "semnasdata"
-FOLDER_ASSET = "storage/"
-SSO_SERVER_LOGIN = http://127.0.0.1:8000/
-
-
-# //hosting
-
 # APP_NAME="Seminar Nasional"
-# APP_ENV=production
+# APP_ENV=local
 # APP_KEY=base64:qmvvHOMxlUciRQzOsiMDKgP1T4UoeUJPvxSE1HkjAOA=
-# APP_DEBUG=false
-# APP_URL=http://semnasdata.com
+# APP_DEBUG=true
+# APP_URL=http://127.0.0.1:8000
 
 # LOG_CHANNEL=stack
 # LOG_DEPRECATIONS_CHANNEL=null
@@ -77,13 +11,13 @@ SSO_SERVER_LOGIN = http://127.0.0.1:8000/
 # DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
-# DB_DATABASE=n1578454_semnasdata
-# DB_USERNAME=n1578454_furizal_semnasdata
-# DB_PASSWORD=2UsmHNQ6D2pz
+# DB_DATABASE=db_semnasdata
+# DB_USERNAME=root
+# DB_PASSWORD=
 
 # BROADCAST_DRIVER=log
 # CACHE_DRIVER=file
-# FILESYSTEM_DISK=hosting
+# FILESYSTEM_DISK=local
 # QUEUE_CONNECTION=sync
 # SESSION_DRIVER=file
 # SESSION_LIFETIME=120
@@ -93,7 +27,7 @@ SSO_SERVER_LOGIN = http://127.0.0.1:8000/
 # REDIS_HOST=127.0.0.1
 # REDIS_PASSWORD=null
 # REDIS_PORT=6379
-
+# w
 # MAIL_MAILER=smtp
 # MAIL_HOST=mailpit
 # MAIL_PORT=1025
@@ -124,6 +58,72 @@ SSO_SERVER_LOGIN = http://127.0.0.1:8000/
 # VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 # FOLDER_IN_PUBLIC_HTML = "semnasdata"
-# FOLDER_ASSET = "storage/public/"
+# FOLDER_ASSET = "storage/"
+# SSO_SERVER_LOGIN = http://127.0.0.1:8000/
 
-# SSO_SERVER_LOGIN = "https://auth.sipa-ftuir.com/"
+
+# //hosting
+
+APP_NAME="Seminar Nasional"
+APP_ENV=production
+APP_KEY=base64:qmvvHOMxlUciRQzOsiMDKgP1T4UoeUJPvxSE1HkjAOA=
+APP_DEBUG=false
+APP_URL=http://semnasdata.com
+
+LOG_CHANNEL=stack
+LOG_DEPRECATIONS_CHANNEL=null
+LOG_LEVEL=debug
+
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=n1578454_semnasdata
+DB_USERNAME=n1578454_furizal_semnasdata
+DB_PASSWORD=2UsmHNQ6D2pz
+
+BROADCAST_DRIVER=log
+CACHE_DRIVER=file
+FILESYSTEM_DISK=hosting
+QUEUE_CONNECTION=sync
+SESSION_DRIVER=file
+SESSION_LIFETIME=120
+
+MEMCACHED_HOST=127.0.0.1
+
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
+
+MAIL_MAILER=smtp
+MAIL_HOST=mailpit
+MAIL_PORT=1025
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_NAME="${APP_NAME}"
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
+AWS_USE_PATH_STYLE_ENDPOINT=false
+
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_HOST=
+PUSHER_PORT=443
+PUSHER_SCHEME=https
+PUSHER_APP_CLUSTER=mt1
+
+VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+VITE_PUSHER_HOST="${PUSHER_HOST}"
+VITE_PUSHER_PORT="${PUSHER_PORT}"
+VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
+VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FOLDER_IN_PUBLIC_HTML = "semnasdata"
+FOLDER_ASSET = "storage/public/"
+
+SSO_SERVER_LOGIN = "https://auth.sipa-ftuir.com/"
