--- a/.env
+++ b/.env
@@ -67,7 +67,7 @@
 APP_NAME="Seminar Nasional"
 APP_ENV=production
 APP_KEY=base64:qmvvHOMxlUciRQzOsiMDKgP1T4UoeUJPvxSE1HkjAOA=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://semnasdata.com
 
 LOG_CHANNEL=stack
